<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<groupId>com.example.utils.fotify_sca.issues_byCategory</groupId>
	<artifactId>fotify_sca-issues_byCategory</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>fotify_sca_issues_byCategory</name>
	<description>Issue Summary By Category</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.2</version>
    </parent>
	<properties>
		<java.version>17</java.version>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<file.encoding>UTF-8</file.encoding>
		<spring-boot.version>3.4.2</spring-boot.version>
		<javafx.version>21.0.6</javafx.version>
        <javafx.plugin.version>0.0.8</javafx.plugin.version>
		<gluonfx.maven.plugin.version>1.0.23</gluonfx.maven.plugin.version>
		<javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
		<charm.version>6.2.3</charm.version>
		<charm.cloudlink.version>6.0.7</charm.cloudlink.version>
		<glisten.afterburner.version>2.1.0</glisten.afterburner.version>
		<attach.version>4.0.21</attach.version>
		<connect.version>2.0.1</connect.version>
		<gluonfx.target>host</gluonfx.target>
		<main.class>com.example.utils.fotify_sca.issues_byCategory.javaFX.FileChooserSample</main.class>
	</properties>
	<dependencies>
	     <dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>
		<dependency>
		    <groupId>com.fasterxml.jackson.dataformat</groupId>
		    <artifactId>jackson-dataformat-xml</artifactId>		    
		</dependency>  
		<dependency>
		    <groupId>com.deepoove</groupId>
		    <artifactId>poi-tl</artifactId>
		    <version>1.12.2</version>
		</dependency>
		<dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>		    
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
			</plugin>
			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>${javafx.maven.plugin.version}</version>
				<configuration>
					<mainClass>${main.class}</mainClass>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.gluonhq</groupId>
				<artifactId>gluonfx-maven-plugin</artifactId>
				<version>${gluonfx.maven.plugin.version}</version>
				<configuration>
					<verbose>true</verbose>
					<target>${gluonfx.target}</target>
					<attachList>
						<list>display</list>
						<list>lifecycle</list>
						<list>statusbar</list>
						<list>storage</list>
					</attachList>
					<mainClass>${main.class}</mainClass>
					<appIdentifier>${app.identifier}</appIdentifier>
					<releaseConfiguration>
						<vendor>Gluon</vendor>
						<description>${app.description}</description>
						<packageType>${package.type}</packageType>
						<!-- for macOS/iOS -->
						<macAppStore>${mac.app.store}</macAppStore>
						<bundleShortVersion>${bundle.short.version}</bundleShortVersion>
						<bundleVersion>${bundle.version}</bundleVersion>
						<!-- for Android -->
						<versionCode>${version.code}</versionCode>
						<providedKeyStorePath>${provided.keystore.path}</providedKeyStorePath>
						<providedKeyStorePassword>${provided.keystore.password}</providedKeyStorePassword>
						<providedKeyAlias>${provided.key.alias}</providedKeyAlias>
						<providedKeyAliasPassword>${provided.key.alias.password}</providedKeyAliasPassword>
					</releaseConfiguration>
					<bundlesList>
<!--                        <list>${main.class}</list>-->
                    </bundlesList>
					<reflectionList>
						<list>${main.class}</list>
					</reflectionList>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency> 
        </dependencies>
    </dependencyManagement>
	<profiles>
		<profile>
			<id>desktop</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<gluonfx.target>host</gluonfx.target>
			</properties>
		</profile>
		<profile>
			<id>mac</id>
			<properties>
				<package.type>pkg</package.type>
				<mac.app.store>false</mac.app.store>
				<bundle.version>2.${env.GITHUB_RUN_NUMBER}</bundle.version>
				<bundle.short.version>1.0</bundle.short.version>
			</properties>
		</profile>
		<profile>
			<id>macstore</id>
			<properties>
				<package.type>pkg</package.type>
				<mac.app.store>true</mac.app.store>
				<bundle.version>2.${env.GITHUB_RUN_NUMBER}</bundle.version>
				<bundle.short.version>1.6</bundle.short.version>
			</properties>
		</profile>
		<profile>
			<id>ios</id>
			<properties>
				<gluonfx.target>ios</gluonfx.target>
				<bundle.version>${env.GITHUB_RUN_NUMBER}</bundle.version>
				<bundle.short.version>1.0</bundle.short.version>
			</properties>
		</profile>
		<profile>
			<id>android</id>
			<properties>
				<gluonfx.target>android</gluonfx.target>
				<app.identifier>com.gluonhq.samples.hellogluon</app.identifier>
				<version.code>${env.GITHUB_RUN_NUMBER}</version.code>
				<provided.keystore.path>${env.GLUON_ANDROID_KEYSTOREPATH}</provided.keystore.path>
				<provided.keystore.password>${env.GLUON_ANDROID_KEYSTORE_PASSWORD}</provided.keystore.password>
				<provided.key.alias>${env.GLUON_ANDROID_KEYALIAS}</provided.key.alias>
				<provided.key.alias.password>${env.GLUON_ANDROID_KEYALIAS_PASSWORD}</provided.key.alias.password>
			</properties>
		</profile>
		<profile>
			<id>pi</id>
			<properties>
				<gluonfx.target>linux-aarch64</gluonfx.target>
			</properties>
		</profile>
		<profile>
			<id>native</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.springframework.boot</groupId>
						<artifactId>spring-boot-maven-plugin</artifactId>
						<configuration>
			                <jvmArguments>-agentlib:native-image-agent=config-merge-dir=src/main/resources/META-INF/native-image/ --enable-preview
			                    </jvmArguments>
			            </configuration>
					</plugin>
					<plugin>
						<groupId>org.graalvm.buildtools</groupId>
						<artifactId>native-maven-plugin</artifactId>
						<configuration>
							<buildArgs>
								<buildArg>--enable-url-protocols=http</buildArg>
								<buildArg>-march=compatibility</buildArg>
							</buildArgs>
						</configuration>
						<executions>
							<execution>
								<goals>
									<goal>build</goal>
								</goals>
								<phase>package</phase>
							</execution>
							<execution>
								<id>test</id>
								<goals>
									<goal>test</goal>
								</goals>
								<phase>test</phase>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
